fix layout issues

--- a/website/src/styles/layout/content.scss
+++ b/website/src/styles/layout/content.scss
@@ -3,12 +3,9 @@
 $transition-timing: 300ms;
 
 .ds-container {
-  align-items: start;
   animation: $transition-timing FadeIn;
   background-color: var(--background-color);
-  display: grid;
-  grid-auto-columns: 100%;
-  grid-template-rows: max-content max-content 1fr max-content;
+
   margin-left: 0;
   padding: 8.8rem 2.4rem 0;
   /* stylelint-disable-next-line property-no-vendor-prefix */
@@ -19,8 +16,6 @@ $transition-timing: 300ms;
   width: 100%;
 
   @media screen and (min-width: $lg-breakpoint) {
-    grid-auto-columns: calc(100% - 28rem);
-    padding: 3.2rem 2.4rem 0;
     transform: translateX(28rem);
     transition: none;
     width: calc(100% - 28rem);
@@ -29,6 +24,16 @@ $transition-timing: 300ms;
   @media screen and (min-width: $xl-breakpoint) {
     padding: 3.2rem 2.4rem 0 7.2rem;
   }
+}
+
+.ds-container .ds-homepage-wrapper {
+  align-items: start;
+  align-items: start;
+  display: grid;
+  grid-auto-columns: 100%;
+  grid-template-rows: max-content max-content 1fr max-content;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 *:where(.ds-subpage-section, .ds-tabs__tab-container) {
